fix subsidy guide spacing

--- a/src/Components/Pages/Subsidy/Subsidy.scss
+++ b/src/Components/Pages/Subsidy/Subsidy.scss
@@ -11,41 +11,31 @@
     }
   }
 
+  .content-section {
+    padding-top: 1.5rem;
+  }
+
+  .content-box {
+    margin: 0 0 1.5rem;
+  }
+
   @include for-phone-only() {
+    .content-section {
+      padding-bottom: 0;
+    }
     .share-button__container {
       margin-top: 2.25rem !important; // overrides ShareButton.scss
     }
-    .content-section {
-      padding: 0 1.5rem 2rem !important; // overrides styles w/ max-width 772px
-      gap: 2rem;
-      .content-box__header-title {
-        display: none;
-      }
-      .content-box__header-subtitle {
-        @include h3_mobile;
-      }
-      .content-box__section {
-        p {
-          margin: unset;
-          @include body_standard_mobile;
-        }
-      }
-      .content-box__footer__message,
-      .content-box__footer__link {
-        @include body_standard_mobile;
-      }
+    .content-box__header-title {
+      display: none;
     }
-
-    .accordion {
-      .content-box__section__header {
+    .content-box__header-subtitle {
+      @include h3_mobile;
+    }
+    .content-box__section {
+      p {
+        margin: unset;
         @include body_standard_mobile;
-        font-weight: 600;
-      }
-      .accordion__content {
-        p,
-        .jfcl-link {
-          @include small_text_mobile;
-        }
       }
     }
   }
